--- a/src/main/resources/templates/hotel.html
+++ b/src/main/resources/templates/hotel.html
@@ -40,6 +40,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/restaurant">Restaurant</a>
                 </li>
+                
+                 <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">Profile</a>
+                </li>
 
             </ul>
 
