--- a/src/main/resources/templates/restaurant.html
+++ b/src/main/resources/templates/restaurant.html
@@ -35,6 +35,10 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/restaurant">Restaurant</a>
                 </li>
+                
+                 <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">Profile</a>
+                </li>
 
             </ul>
 
