--- a/src/main/resources/templates/facilities.html
+++ b/src/main/resources/templates/facilities.html
@@ -24,18 +24,22 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/hotel">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/room_reservation">Booking</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/facilities">Facilities</a>
                 </li>
 
                 <li class="nav-item">
                     <a class="nav-link" href="/restaurant">Restaurant</a>
+                </li>
+                
+                 <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">Profile</a>
                 </li>
 
             </ul>
