--- a/src/main/resources/templates/room_reservation.html
+++ b/src/main/resources/templates/room_reservation.html
@@ -25,10 +25,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/hotel">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/room_reservation">Booking</a>
             </li>
             <li class="nav-item">
@@ -38,6 +38,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/restaurant">Restaurant</a>
             </li>
+            
+             <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">Profile</a>
+                </li>
 
         </ul>
     </div>
