--- a/bin/src/main/resources/static/css/employeedetails.css
+++ b/bin/src/main/resources/static/css/employeedetails.css
@@ -1,20 +1,23 @@
 h1 {
     text-align: center;
-    color: blue;
+    color: white;
     font-weight: bold;
 }
-form{
-	padding-top:100px;
-	padding-left:100px;
-	
+
+form {
+    padding-top: 100px;
 }
+
 body {
     background-image: url("https://assets.hyatt.com/content/dam/hyatt/hyattdam/images/2018/09/06/1111/Hyatt-Regency-Mumbai-P244-Facade.jpg/Hyatt-Regency-Mumbai-P244-Facade.16x9.jpg");
 }
-p{
-	color:white;
-	padding:0px;
+
+p {
+    color: white;
+    padding: 0px;
+    font-weight: bold;
 }
+
 label {
     display: block;
     font-family: 'Arial';
@@ -22,13 +25,12 @@ label {
     font-size: 1.25em;
 }
 
-input,
-textarea {
+input {
     border-radius: 2.2px;
     font-size: 1.25em;
     font-family: 'Arial';
     padding: 10px;
-    width: 350px;
+    width: 240px;
 }
 
 select {
@@ -43,14 +45,6 @@ div.elem-group {
     display: inline-block;
     padding-top: 10px;
     padding-right: 50px;
-}
-
-div.elem-group1 {
-    width: 700px;
-    padding-top: 10px;
-    padding-right: 50px;
-    padding-left: 250px;
-    float: center;
 }
 
 textarea {
@@ -87,6 +81,14 @@ button:active {
     transform: translateY(4px);
 }
 
+div.card {
+    margin: 0 auto;
+    /* Added */
+    float: none;
+    /* Added */
+    margin-bottom: 10px;
+    /* Added */
+}
 
 li {
     list-style-type: none;
@@ -177,10 +179,11 @@ li {
         width: 100%;
     }
 }
-.success_msg{
-	position: relative;
-	left: 350px;
-	color: green;
-	font-weight: bolder;
-	top: -60px;
+
+.success_msg {
+    position: relative;
+    left: 350px;
+    color: green;
+    font-weight: bolder;
+    top: -60px;
 }
