--- a/bin/src/main/resources/templates/admin.html
+++ b/bin/src/main/resources/templates/admin.html
@@ -5,12 +5,17 @@
 <title>Admin Dashboard</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="css/admin.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="heading">
 <h4>This is admin dashboard</h4>
 
+</div>
+<div th:if="${session.message}" class="alert alert-success text-center">
+     	User Deleted Successfully
+        <th:block th:text="${#session.removeAttribute('message')}"></th:block>               
 </div>
  <div>
         <table class="table table-striped table-bordered">
@@ -19,14 +24,25 @@
                     <th>User ID</th>
                     <th>E-mail</th>
                     <th>Role</th>
-                  
-                </tr>
+                    <th>Options</th>
+                    </tr>
             </thead>
             <tbody>
                 <tr th:each="USER: ${listUsers}">
                     <td th:text="${USER.id}">User ID</td>
                     <td th:text="${USER.email}">E-mail</td>
                     <td th:text="${USER.role}">Role</td>
+                    <td>
+                    	<div class="udel_icons">
+	                    	<a th:href="@{'admin/update/'+${USER.id}}">
+	                    		<i class="far fa-edit m-auto"></i>
+	                    	</a>
+	                    	<a th:href="@{'admin/delete/'+${USER.id}}">
+	                    		<i class="fas fa-trash-alt m-auto"></i>
+	                    	</a>
+                    	</div>
+                    </td>
+                    
                    
                 </tr>
             </tbody>
