--- a/bin/src/main/resources/templates/login.html
+++ b/bin/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
                             <h3 class="text-center text-info">Login</h3>
                             <div th:if="${param.error}" class="alert alert-danger">
 			Invalid username and password.</div>
-		<div th:if="${param.logout}">
+		<div th:if="${param.logout}"  class="alert alert-success">
 		
 	You have been logged out.
 	</div>
