--- a/bin/src/main/resources/templates/room_reservation.html
+++ b/bin/src/main/resources/templates/room_reservation.html
@@ -13,6 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 
@@ -24,10 +25,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/hotel">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/room_reservation">Booking</a>
             </li>
             <li class="nav-item">
@@ -37,6 +38,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/restaurant">Restaurant</a>
             </li>
+            
+             <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">Profile</a>
+                </li>
 
         </ul>
     </div>
@@ -44,8 +49,7 @@
 
 <body>
 	<form th:action="@{/process_reservation}" method="post" th:object="${rooms}">
-    <div class="card bg-dark border-secondary mb-3" style="height:500px;max-width:1000px;padding-left:100px;">
-        <h1>Personal Details</h1>
+  <div class="card border-secondary mb-3" style="height:550px;max-width:900px;padding-left:100px;background-color:black;border-width:5px;border-color:white;border-radius:30px">        <h1>Personal Details</h1>
         <div class="row">
             <div class="column">
                 <div class="elem-group">
@@ -54,7 +58,7 @@
                     id="name" 
                     name="first_name" 
                     placeholder="First Name" 
-                    pattern=[A-Z\sa-z]{3,20} 
+                    pattern=[A-Z\sa-z]{1,20} 
                     required
                     th:value="${rooms.first_name}">
                 </div>
@@ -64,7 +68,7 @@
                     id="name" 
                     name="last_name" 
                     placeholder="Last Name" 
-                    pattern=[A-Z\sa-z]{3,20} 
+                    pattern=[A-Z\sa-z]{1,20} 
                     required
                  	th:value="${rooms.last_name}">
                 </div>
@@ -83,7 +87,7 @@
                 <div class="elem-group">
                     <input type="text" 
                     id="email" 
-                    placeholder="contact number" 
+                    placeholder="Contact number" 
                     name="phone_no" 
                     required
                     th:value="${rooms.phone_no}">
@@ -95,6 +99,7 @@
         <div class="row">
             <div class="column">
                 <div class="elem-group ">
+                <p>No. of Adults</p>
                     <input type="number" 
                     id="adult" 
                     name="adults" 
@@ -105,12 +110,13 @@
                     >
                 </div>
                 <div class="elem-group ">
+                <p>No. of Children</p>
                     <input type="number" 
                     id="child" 
                     name="children" 
                     placeholder="No of Children" 
                     min="0" 
-                    required
+                    
                     th:value="${rooms.children}"
                     >
                 </div>
@@ -119,6 +125,7 @@
         <div class="row">
             <div class="column">
                 <div class="elem-group">
+                <p>Check-In Date</p>
                     <input 
                     type="date" 
                     id="checkin-date" 
@@ -129,6 +136,7 @@
                     >
                 </div>
                 <div class="elem-group">
+                <p>Check-Out Date</p>
                     <input type="date" 
                     id="checkout-date" 
                     name="checkoutDate" 
@@ -145,20 +153,22 @@
                     <select id="room-selection" 
                     name="category" 
                     placeholder="Check Room Preference" 
+                    th:value ="${rooms.category}"
                     required>
                          <option value="">Choose a Room from the List</option>
-                         <option value="">Standard</option>
-                         <option value="">Superior</option>
-                         <option value="">Junior Suite</option>
-                         <option value="">Executive Suite</option>
+                         <option value="Luxury Room">Luxury Room</option>
+                         <option value="Luxury Grande Room City View">Luxury Grande Room City View</option>
+                         <option value="Luxury Grande Room Sea View">Luxury Grande Room Sea View</option>
                     </select>
+                    
+                    
                 </div>
                 <div class="elem-group">
                     <textarea 
                     id="message" 
                     name="special_instructions" 
                     placeholder="Tell us anything else that might be important." 
-                    required
+                    
                     th:value="${rooms.special_instructions}"
                     ></textarea>
                 </div>
