--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,6 +11,9 @@
 <body>
 <div class="heading">
 <h4>This is admin dashboard</h4>
+<div class="">
+<a href="/logout">Logout</a>
+</div>
 
 </div>
 <div th:if="${session.message}" class="alert alert-success text-center">
