--- a/src/main/resources/templates/restaurant.html
+++ b/src/main/resources/templates/restaurant.html
@@ -78,9 +78,9 @@
                     <div class="left">Lunch - 12:30 PM to 2:45 PM</div>
                     <div>Dinner - 7:00 PM to 11:45 PM</div>
                 </div>
-                <div class="reservation">
+              <!--   <div class="reservation">
                     <a href="">Reserve A Table</a>
-                </div>
+                </div> -->
                 
             </div>
         </div>
@@ -111,9 +111,9 @@
                     <div class="left">Lunch - 12:30 PM to 2:45 PM</div>
                     <div>Dinner - 7:00 PM to 11:45 PM</div>
                 </div>
-                <div class="reservation">
+               <!--  <div class="reservation">
                     <a href="">Reserve A Table</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="restaurant_card">
@@ -143,9 +143,9 @@
                     <div class="left">Lunch - 12:30 PM to 2:45 PM</div>
                     <div>Dinner - 7:00 PM to 11:45 PM</div>
                 </div>
-                <div class="reservation">
+<!--                 <div class="reservation">
                     <a href="">Reserve A Table</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="restaurant_card">
@@ -175,9 +175,9 @@
                     <div class="left">Lunch - 12:30 PM to 2:45 PM</div>
                     <div>Dinner - 7:00 PM to 11:45 PM</div>
                 </div>
-                <div class="reservation">
+                <!-- <div class="reservation">
                     <a href="">Reserve A Table</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="restaurant_card">
@@ -207,9 +207,9 @@
                     <div class="left">Lunch - 12:30 PM to 2:45 PM</div>
                     <div>Dinner - 7:00 PM to 11:45 PM</div>
                 </div>
-                <div class="reservation">
+              <!--   <div class="reservation">
                     <a href="">Reserve A Table</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="restaurant_card">
@@ -239,9 +239,9 @@
                     <div class="left">Lunch - 12:30 PM to 2:45 PM</div>
                     <div>Dinner - 7:00 PM to 11:45 PM</div>
                 </div>
-                <div class="reservation">
+              <!--   <div class="reservation">
                     <a href="">Reserve A Table</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
