--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -53,7 +53,7 @@
     </nav>
   
     <div class="header">
-        <h2>Welcome to User Dashboard</h2>
+        <h2>Welcome to Dashboard</h2>
     </div>
 
     <div class="login-container">
@@ -74,12 +74,7 @@
                 <h4 th:text="${user.email}"></h4>
             </div> 
             </div>
-            <div class="user">
-                <h4>Country</h4>
-                <div class="user-border">
-                    <h4 th:text="${user.country}"></h4>
-                </div> 
-            </div>
+         
 
         </div>
           
