--- a/src/main/resources/templates/billing.html
+++ b/src/main/resources/templates/billing.html
@@ -3,21 +3,23 @@
 <head>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/admin.css">
+	<link rel="stylesheet" href="css/billing.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<title>Bill</title>
 </head>
 <body>
-	<h1>This is billing page:</h1>
-	<h4 th:text="${user.name}"></h4>
-	<h4 th:text="${user.email}"></h4>
+   <div class ="heading">
+	<h3>View your Bookings</h3>
+	
+	</div>
 	
 	
 <div>
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
                 <tr>
+                    <th>Name</th>
                     <th>Room</th>
                     <th>Rate</th>
                     <th>Days</th>
@@ -30,6 +32,7 @@
             		<td colspan="3"> No Rooms Booked </td>
         		</tr>
                 <tr th:each="userRoom : ${userRooms}">
+                     <td><span th:text="${user.name}"> Name </span></td>
 		        	<td><span th:text="${userRoom.category}"> Room </span></td>
 		        	<td><span th:text="${userRoom.price}"> Rate </span></td>
 		            <td><span th:text="${userRoom.total_days}"> Days </span></td>
